=====================================
Date	  : Version: Description
=====================================

2019-07-16: v1.0.0 : Initial release.
2019-10-21: v1.0.1 : Fixed case bug in ID.
                     Added redirect to PayBatch as well.
                     Added redirect to client invoices on failure.
                     Added PayBatch notify.
2019-10-31: v1.0.2 : Better recurring handling using dedicated PayBatch cron scripts.
2019-11-07: v1.0.3 : Added check for valid token format in callback.
                     Added "Pay" button to invoicing.