@@ -10,3 +10,4 @@ Date	  : Version: Description
 2019-10-31: v1.0.2 : Better recurring handling using dedicated PayBatch cron scripts.
 2019-11-07: v1.0.3 : Added check for valid token format in callback.
                      Added "Pay" button to invoicing.
+2019-11-30: v1.0.4 : Added auto currency convert feature for loaded currencies (PayBatch).
